infra/k8s-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
spec:
  rules:
  - host: auth-ticket.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-srv
            port:
              number: 3000
  ingressClassName: nginx
