infra/k8s-dev/ms1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ms1
spec:
  rules:
  - host: ms1.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms1-srv
            port:
              number: 4000
  ingressClassName: nginx
