infra/k8s-dev/ms12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-2
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ms12.dev
    http:
      paths:
      - path: /api/ms1
        pathType: Prefix
        backend:
          service:
            name: ms1-srv
            port: 
              number: 4000
      - path: /api/ms2
        pathType: Prefix
        backend:
          service:
            name: ms2-srv
            port: 
              number: 4000
