infra/k8s-dev/ms2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ms2
spec:
  rules:
  - host: ms2.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms2-srv
            port:
              number: 4000
  ingressClassName: nginx
